# cpp-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh
SimpleLibrary/: CMakeLists.txt
SimpleLibrary/include/SimpleLibrary/: Gain.h  SimpleClass.h  SimpleStruct.h
SimpleLibrary/source/: SimpleClass.cpp
SimpleLibrary/tests/: CMakeLists.txt
SimpleLibrary/tests/source/: Main.cpp  SimpleClassTestCase.cpp  SimpleStructTestCase.cpp
docker/builder/: Dockerfile  README.md
source/: app.cpp
src/: SimpleClass.cpp  SimpleClass.h  SimpleStruct.h  app.cpp
test/: test_SimpleClass.cpp  test_SimpleStruct.cpp
toolchains/: linux-toolchain.cmake
